Bug 183237 - Changing sender/receiver column to show does not refresh view
Summary: Changing sender/receiver column to show does not refresh view
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: 1.11.90
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
: 184014 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-02-04 23:19 UTC by Albert Astals Cid
Modified: 2009-03-11 15:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2009-02-04 23:19:19 UTC
Version:           1.11.0 (using 4.2.00 (KDE 4.2.0), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.27-11-generic

How to reproduce:
 * Right click on a folder
 * Properties
 * Change column to show value

See how the header of the list view is updated but the the contents of the column
Comment 1 Jaime Torres 2009-02-05 16:40:24 UTC
Confirmed in "Senders/Receivers Flat" in kmail 1.11.90 (4.2.60).
Comment 2 Jaime Torres 2009-02-11 17:35:44 UTC
*** Bug 184014 has been marked as a duplicate of this bug. ***
Comment 3 Szymon Stefanek 2009-03-10 17:49:41 UTC
SVN commit 937865 by stefanek:

Reload the folder when the view configuration changes.

BUG: 183237




 M  +1 -0      kmmainwidget.cpp  
 M  +3 -2      messagelistview/core/model.cpp  
 M  +7 -0      messagelistview/core/model.h  
 M  +14 -2     messagelistview/storagemodel.cpp  
 M  +5 -0      messagelistview/storagemodel.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=937865
Comment 4 Thomas McGuire 2009-03-11 15:36:18 UTC
SVN commit 938236 by tmcguire:

Backport r937865 by stefanek from trunk to the 4.2 branch:

Reload the folder when the view configuration changes.

CCBUG: 183237





 M  +1 -0      kmmainwidget.cpp  
 M  +3 -2      messagelistview/core/model.cpp  
 M  +7 -0      messagelistview/core/model.h  
 M  +14 -2     messagelistview/storagemodel.cpp  
 M  +5 -0      messagelistview/storagemodel.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=938236