Reload the folder when the view configuration changes.

BUG: 183237



svn path=/trunk/KDE/kdepim/; revision=937865